--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
 set -g prefix `
-bind-key / last-window
-bind-key ` send-prefix
+bind-key ` last-window
+bind-key / send-prefix
 
 set -g status-position bottom
 set -g status-bg colour234
